# spork

./: README.md  pyproject.toml  setup.cfg  setup.py
src/: main.py
src/spork/: __init__.py  entity.py  expression.py  func_expr.py  query.py  spork.py  types.py  window.py
tests/: test_expression.py
