[metadata]
name = spork
version = 1.0.0
author = Ji Krochmal
author_email = ji.krochmal@gmail.com
description = A SQLAlchemy-like query builder, adapted primarily for Spark SQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KroqueJa/spork
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
python_requires = >=3.10

